--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -18,7 +18,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="Settings"
-        android:textColor="@android:color/holo_red_dark"
+        android:textColor="@android:color/holo_red_light"
         android:textSize="50sp"
         android:textStyle="bold"
         app:fontFamily="sans-serif-black"
@@ -39,7 +39,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@android:drawable/ic_menu_revert"
+        android:background="@mipmap/left_arrow_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.025"
@@ -62,7 +62,7 @@
         android:scaleY="2"
         android:switchTextAppearance="@style/TextAppearance.AppCompat.Display1"
         android:text="Sound"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@android:color/holo_red_light"
         android:textOff="Sound off"
         android:textScaleX="1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -85,7 +85,7 @@
         android:scaleX="2"
         android:scaleY="2"
         android:text="Music"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@android:color/holo_red_light"
         android:textScaleX="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
