--- a/app/src/main/res/layout/activity_highscores.xml
+++ b/app/src/main/res/layout/activity_highscores.xml
@@ -17,7 +17,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="Highscores"
-        android:textColor="@android:color/holo_red_dark"
+        android:textColor="@android:color/holo_red_light"
         android:textSize="50sp"
         android:textStyle="bold"
         app:fontFamily="sans-serif-black"
@@ -132,7 +132,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@android:drawable/ic_menu_revert"
+        android:background="@mipmap/left_arrow_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.025"
